added logic to set attachment file realted to the token image

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,13 @@
 // 	top: '10%';
 // 	right: 0;
 // }
+// #product_images_container {
+// 	.product_images {
+// 		img {
+// 			width: 100%;
+// 		}
+// 	}
+// }
 #blockchain_product_data {
 	position: relative;
 	#spinner {
