--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,31 @@
-#blockchain_product_data {
+#blockchain_product_data,
+#posts-filter {
   position: relative;
 }
-
-#blockchain_product_data #spinner {
+#blockchain_product_data #spinner,
+#posts-filter #spinner {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   z-index: 99999;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   background: rgba(0, 0, 0, 0.2);
 }
-
-#blockchain_product_data #spinner svg {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+#blockchain_product_data #spinner svg,
+#posts-filter #spinner svg {
+  align-self: center;
 }
-/*# sourceMappingURL=index.css.map */
+#blockchain_product_data .custom-toast-position,
+#posts-filter .custom-toast-position {
+  margin-top: 20px;
+}
+
+.wp-list-table .manage-column.column-asset_fingerprint {
+  width: 12%;
+}
+
+#woocommerce-product-data ul.wc-tabs li.bakrypt-blockchain_tab a::before {
+  content: "\f17e";
+}/*# sourceMappingURL=index.css.map */
