--- a/src/index.scss
+++ b/src/index.scss
@@ -29,4 +29,4 @@
 	content: '\f17e';
 }
 
-.ant-tabs-dropdown, .ant-popover, .ant-message {z-index: 999999 !important;}
+.ant-tabs-dropdown, .ant-popover, .ant-message, .ant-drawer {z-index: 999999 !important;}
